--- a/video-game-maps/src/Buttons.css
+++ b/video-game-maps/src/Buttons.css
@@ -8,7 +8,7 @@
     width: 60px;
     padding: 1px;
     margin: 5px;
-    border: 2px solid #38f55b;
+    border: 2px solid #dd3742;
     cursor: pointer;
     display: flex;
     justify-content: center;
